--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ button[id="open-sidebar"] {
 bento-sidebar[id="sidebar1"] {
     background-color: var(--color-primary);
 }
+
 bento-sidebar[id="sidebar1"] li {
     padding: 2rem;
     cursor: pointer;
@@ -195,9 +196,14 @@ section[id="credit_cards"] .container{
 section[id="credit_cards"] p {
     padding: 0 2rem;
 }
- section[id="credit_cards"] h3, figcaption {
+
+section[id="credit_cards"] h3, figcaption {
     text-align: center;
- }
+}
+
+article[class="footer-column"] p {
+    color: var(--color-secondary);
+}
 
 figure[class="creditcard"] {
     padding: 1rem;
@@ -210,5 +216,118 @@ figcaption {
 .image {
     padding: 1rem;
 }
+
+/* END OF CREDIT CARDS STYLING */
+footer[id="footer"] li {
+    list-style: none;
+}
+
+footer[id="footer"] {
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+}
+
+footer[id="footer"] a {
+    color: var(--color-secondary);
+}
+footer[id="footer"] a:hover {
+    color: var(--color-tertiary);
+
+}
+
+.footer-column {
+    padding: 1.25rem;
+    min-width: 12.5rem;
+}
+
+section[id="footer-main"] {
+    padding: 1.25rem 1.875rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+h2[class="footer-title"] {
+    color:var(--color-primary);
+    font-size: 1.375rem;
+    padding-bottom:  0.625rem;
+}
+
+/* END OF FOOTER STYLING */
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+label[class="label"] input[type="email"]{
+    border: 0;
+    padding: 0.625rem;
+    background-color: var(--color-secondary);
+    margin-top: 0.3125rem;
+}
+
+input[type="submit"] {
+    background-color: var(--color-tertiary);
+    color: var(--color-primary);
+    cursor: pointer;
+    border: 0;
+    padding: 0.625rem 0.9375rem;
+    margin-top: 0.3125rem;
+    font-weight: 600;
+}
+
+/* END OF SIGN UP AREA STYLING */
+
+section[id="footer-socials"]{
+    padding: 0 1.875rem 1.25rem;
+}
+
+ul[class="footer-icons"] {
+    display: flex;
+    justify-content: center;
+    border-top: 1px var(--color-secondary)solid;
+    padding-top: 1.25rem;
+}
+
+ul[class="footer-icons"] li {
+    margin: 0.5rem;
+}
+
+/*  END OF SOCIAL MEDIA STYLING */
+
+section[id="footer-legal"] a {
+    color: var(--color-secondary);
+}
+
+section[id="footer-legal"] {
+    padding: 0.9375rem 1.875rem;
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+    
+}
+
+ul[class="footer-legal-items"] {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+ul[class="footer-legal-items"] li {
+    margin: 0.125rem 0.625rem;
+    white-space: nowrap;   
+}
+
+.footer-legal-items li:nth-of-type(2) {
+    flex: 1;
+}
+
+/* END OF LEGAL SECTION STYLING */
+
+section[id="footer-main"]{
+    justify-content: space-around;
+}  
+
+/* END OF FOOTER SECTION */
 
 
