--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,7 @@ figcaption {
 
 footer[id="footer"] li {
     list-style: none;
+    padding: 0.25rem;
 }
 
 footer[id="footer"] {
@@ -469,3 +470,43 @@ select:focus-visible {
     background-color: var(--color-secondary);
     color: var(--color-primary);
 }
+/* END OF APPLY STYLING */
+
+article[class="sign-in"] {
+    width: 100%;
+    margin: 0 auto;
+}
+
+article[class="sign-in"] h2 {
+    margin: 1em auto;
+    text-align: center;
+}
+
+article[class="sign-in"] form {
+    width: 60vw;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 0 auto;
+    padding-bottom: 2em;
+}
+
+article[class="sign-in"] label {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+article[class="sign-in"] input[type="submit"]{
+    display: block;
+    width: 60%;
+    margin: 0 auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+    margin-top: 1em;
+    margin-bottom: 1em;
+    min-width: 250px;
+    text-transform: uppercase;
+}
+ 
+ 
