--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ html {
 body {
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
-    width: 100vw;
     line-height: 1.75;
 }
 
@@ -148,7 +147,7 @@ section[id="about"] .container {
 }
 
 section[id="about"] h1, .intro, .about-p {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.7);
     color: var(--color-secondary);
     padding: 0.5rem;
     text-align: center;
@@ -171,9 +170,10 @@ section[id="benefits"] .container {
 }
 
 article[class="benefits-column"] {
-    padding: 1rem 5rem; 
+    padding: 1rem;
     border-radius: 2px 16px;  
     border: 1px solid var(--color-secondary);
+    text-align: center;
 }
 
 article[class="benefits-column"] p {
@@ -203,10 +203,6 @@ section[class="credit_section"] h3, figcaption {
     text-align: center;
 }
 
-article[class="footer-column"] p {
-    color: var(--color-secondary);
-}
-
 figure[class="creditcard"] {
     padding: 1rem;
 }
@@ -234,9 +230,14 @@ footer[id="footer"] {
 footer[id="footer"] a {
     color: var(--color-secondary);
 }
+
 footer[id="footer"] a:hover {
     color: var(--color-tertiary);
 
+}
+
+article[class="footer-column"] p {
+    color: var(--color-secondary);
 }
 
 .footer-column {
@@ -520,9 +521,6 @@ article[class="sign-in"] input[type="submit"]{
         display: none;
     }
     
-    .buttons {
-        display: none;
-    }
     header[id="header"] {
         position: fixed;
         width: 100%;
@@ -534,13 +532,13 @@ article[class="sign-in"] input[type="submit"]{
         align-items: center;
         padding: 0 1rem;
     }
-
     .nav-links {
         display: flex;
         justify-content: space-between;
-        gap: 4rem; 
+        gap: 4rem;
     }
 
+  
     section[id="benefits"] .container {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -548,6 +546,8 @@ article[class="sign-in"] input[type="submit"]{
     section[class="credit_section"] .container {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    
 
     section[class="contact"] .container {
         grid-template-columns: minmax(min-content, 1fr)
@@ -562,5 +562,4 @@ article[class="sign-in"] input[type="submit"]{
     article[class="application"] h2 {
         padding-top: 6rem;
     }
-    
 }
