--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ html {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    height: 100vh;
-    line-height: 1.75;
+    min-height: 100vh;
+    line-height: 1.75; 
 }
 
 .container {
     margin: 0 auto;
-    width: var(--container-large)
+    width: var(--container-large);
 }
 
 img {
@@ -98,6 +98,10 @@ a:hover {
     text-transform: uppercase;
     transition: var(--transition);
 }
+
+html, body {
+    width: auto!important; overflow-x: hidden!important
+} 
 /* END OF GENERAL STYLING */
 
 nav[id="mobile-nav"] {
@@ -136,6 +140,14 @@ section[id="about"] {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+section[id="about"] {
+    background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.jpg');
+  
+    @supports (background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.avif')) {
+      background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.avif');
+    }
+} /* css fallbacks for background image */
 
 section[id="about"] .container {
     display: grid;
@@ -307,7 +319,7 @@ ul[class="footer-icons"] li {
     margin: 0.5rem;
 }
 .footer-icons svg:hover{
-    background-color: var(--color-tertiary);
+    fill: var(--color-tertiary);
 }
 /*  END OF SOCIAL MEDIA STYLING */
 
@@ -346,6 +358,7 @@ section[class="contact"] .container {
     display: grid;
     gap: 1rem;
     grid-template-columns: minmax(min-content, 1fr);
+    place-items: center;
 }
 
 form[action="contact-form"] {
