--- a/styles.css
+++ b/styles.css
@@ -192,11 +192,16 @@ article[class="benefits-column"] {
     padding: 1rem;
     border-radius: 2px 16px;  
     border: 1px solid var(--color-secondary);
+    text-align: center;
 }
 
 article[class="benefits-column"] p {
     color: var(--color-secondary);
-    text-align: center;
+  
+}
+
+article[class="benefits-column"] h3 {
+    padding-bottom: 1rem;
 }
 /* END OF BENEFITS STYLING */
 
@@ -362,7 +367,6 @@ section[class="contact"] .container {
 }
 
 form[action="contact-form"] {
-    background-color: var(--color-secondary);
     padding: 2rem;
     display: flex;
     flex-direction: column;
