--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     --color-alternate: #055043;
     --color-white: #ffffff;
     --transition: 0.3s ease;
-    --container-medium: 80%;
+    --container-medium: 86%;
     --container-large: 90%;
 }
 
@@ -41,7 +41,7 @@ img {
 }
 
 section {
-    padding: 6rem 0;
+    padding: 4rem 0;
 }
 
 section h2 {
@@ -192,16 +192,22 @@ article[class="benefits-column"] {
     padding: 1rem;
     border-radius: 2px 16px;  
     border: 1px solid var(--color-secondary);
-    text-align: center;
 }
 
 article[class="benefits-column"] p {
     color: var(--color-secondary);
+    padding-left: 1rem;
   
 }
 
 article[class="benefits-column"] h3 {
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+}
+
+article[class="benefits-column"] .svg {
+    display: block;
+    margin: 0 auto;
 }
 /* END OF BENEFITS STYLING */
 
