--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,6 @@ a:hover {
     color: var(--color-secondary);
     padding: 5px 20px;
     border: 1px solid var(--color-secondary);
-    font-weight: 600;
     text-transform: uppercase;
     transition: var(--transition);
 }
@@ -135,22 +134,20 @@ bento-sidebar[id="sidebar1"] li {
 /* END OF MOBILE NAVIGATION STYLING */
 
 section[id="about"] {
-    @supports (background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.avif')) {
-      background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.avif');
-    }
-} 
-
-section[id="about"] {
     background-color: var(--color-tertiary);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.jpg');
+    @supports (background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.webp')) {
+        background-image: url('./imgs/pexels-nataliya-vaitkevich-6214382.webp');
+    }  
 }
 
 section[id="about"] .container {
     display: grid;
     grid-template-columns: minmax(min-content, 1fr); 
+    place-items: end center;
 }
 
 .container .about-article {
@@ -160,7 +157,7 @@ section[id="about"] .container {
 section[id="about"] h1, .intro, .about-p {
     background-color: rgba(0, 0, 0, 0.7);
     color: var(--color-secondary);
-    padding: 0.5rem;
+    padding: 1rem;
     text-align: center;
 }
 
